flex  gap fixed

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@ h1 {
 #projects {
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: 2em;
 
   width: 100%;
 }
@@ -234,7 +234,7 @@ h1 {
 #space {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: .6rem;
+  gap: 1rem;
 }
 
 #space #box {
